FAQ students klaar + FAQ docenten beging gemaakt voor suggestie ruimere tekstblokken

--- a/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
@@ -15,10 +15,10 @@
     </div>
 </div>
 
+<!-- Back to top -->
+<p><a id="topmenu"></a></p>
 
 <div>
-    <p style="text-align: center;">This page is not fully updated yet, please visit our <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>exstensive instruction</em></a> if details are missing.</p>
-    <hr />
     <table style="border-collapse: collapse; width: 98.1164%; border-style: hidden; height: 53px;" border="0">
         <tbody>
             <tr style="height: 43px;">
@@ -47,9 +47,6 @@
     </table>
 </div>
 
-<!-- Back to top -->
-<p><a id="topmenu"></a></p>
-
 <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fcfcfc;">
     <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Teachers</b></span></p>
     <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">I made a few late adjustments to the exam in TestVision. What do I need to do?</a></span></p>
@@ -62,16 +59,21 @@
     <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ8">What will happen if anything goes wrong during the exam?</a></span></p>
     <br>
     <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Students</b></span></p>
-    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="https://canvas.uva.nl/courses/28129/pages/testvision-faq-students" target=_blank>Share this page with students</a></span></p>
+    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="https://canvas.uva.nl/courses/28129/pages/digital-exams-faq-students" target=_blank>Share this page with students</a></span></p>
 </div>
 
 <!-- FAQ1 -->
-<p>&nbsp;</p>
 <p><a id="FAQ1"></a></p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
-    <h4 style="text-align:center"><strong>I made a few late adjustments to the exam in TestVision. What do I need to do?</strong></h4>
-    <p style="padding:10px">If you changed any details in TestVision within one week prior to the exam, please make sure to do the following: <a href="#publishchanges"><span>publish your changes</span></a>. If you have added extra questions to the test, please do not forget to actually <a href="#linkquestions"><span>link question(s) to the exam</span></a> before publishing your recent changes.
-    You can no longer ask an ICTO employee to perform these steps because the 1 week deadline has passed, the consequence is that you must ensure these steps yourself to avoid mistakes. You can of course reach ICTO for questions but we are not responsible for errors caused by changes after the 1-week deadline nor can we guarantee a timely response.</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+<h4 style="text-align: center; margin-bottom: 35px;"><strong>I made a few late adjustments to the exam in TestVision. What do I need to do?</strong></h4>
+    <p style="text-align: center;">
+        If you changed any details in TestVision within one week prior to the exam, please make sure to do the following: <a href="#publishchanges"><span>publish your changes</span></a>.
+    </p>
+    <p style="text-align: center;">
+        If you have added extra questions to the test, please do not forget to actually <a href="#linkquestions"><span>link question(s) to the exam</span></a> before publishing your recent changes. You can no longer ask an ICTO employee to perform these steps because the 1 week deadline has passed, the consequence is that you must ensure these steps yourself to avoid mistakes. You can of course reach ICTO for questions but we are not responsible for errors caused by changes after the 1-week deadline nor can we guarantee a timely response.
+    </p>
 
     <!--How to publish changes -->
     <div id="publishchanges" class="enhanceable_content dialog" style="width:500px">
@@ -90,11 +92,14 @@
 </div>
 
 <!-- FAQ2 -->
-<p>&nbsp;</p>
 <p><a id="FAQ2"></a></p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
-    <h4 style="text-align:center"><strong>What do students need to bring to the exam?</strong></h4>
-    <p style="padding:10px">Students need to bring their UvA Pass and identification. They also need to enter their UvAnetID and password in TestVision to login. Students are allowed to bring bags and they can place them under their table. Share <a href="https://canvas.uva.nl/courses/28129/pages/testvision-faq-students"target=_blank>this page</a> for more frequently asked questions for students.</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+<h4 style="text-align: center; margin-bottom: 35px;"><strong>What do students need to bring to the exam?</strong></h4>
+    <p style="text-align: center;">
+        Students need to bring their UvA Pass and identification. They also need to enter their UvAnetID and password in TestVision to login. Students are allowed to bring bags and they can place them under their table. Share <a href="https://canvas.uva.nl/courses/28129/pages/digital-exams-faq-students"target=_blank>this page</a> for more frequently asked questions for students.
+    </p>
     <p>&nbsp;</p>
     <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
 </div>
