--- a/A-Z/Exams/TestVision/22-23/5_FAQ-students_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/5_FAQ-students_22-23.html
@@ -4,66 +4,104 @@
 <!-- Back to top -->
 <p><a id="topmenu"></a></p>
 
-  <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fcfcfc;">
-      <p style="text-align: center;"><span style="font-size: 13pt;"><b>Student FAQ digital exams</b></span></p>
-      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">I have a disability and need extra time for the exam. What should I do?</a></span></p>
-      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ2">What do I need to bring to the exam?</a></span></p>
-      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ3">Can I bring a bag? Are there lockers or something to leave things?</a></span></p>
-      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ4">How do I login to the exam?</a></span></p>
-      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ5">What happens if I’m late? Can I nevertheless start the exam?</a></span></p>
-      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ6">What if I do not have extra time during the exam even though I am entitled to it?</a></span></p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fcfcfc;">
+    <h3><p style="text-align: center;"><span style="font-size: 14pt;"><b>Frequently asked questions</b></span></p></h3>
+    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">I have a disability and need extra time for the exam. What should I do?</a></span></p>
+    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ2">What do I need to bring to the exam?</a></span></p>
+    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ3">Can I bring a bag? Are there lockers or something to leave things?</a></span></p>
+    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ4">What happens if I’m late? Can I nevertheless start the exam?</a></span></p>
+    <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ5">What if I do not have extra time during the exam even though I am entitled to it?</a></span></p>
+    <br />
+    <h3><p style="text-align: center;"><span style="font-size: 14pt;"><strong>How to login</strong></span></p></h3>
+    <table style="border-collapse: collapse; width: 55.5269%; height: auto; border-style: hidden; margin-left: auto; margin-right: auto;" border="1">
+        <tbody>
+            <tr style="height: 29px; border-style: hidden;">
+                <td style="width: 49.9504%; border-style: hidden; text-align: center; height: 29px;"><a target="_blank" rel="noopener noreferrer" href="https://canvas.uva.nl/courses/28129/files/7187213?wrap=1">Exam</a></td>
+                <td style="width: 49.9504%; border-style: hidden; text-align: center; height: 29px;"><a target="_blank" rel="noopener noreferrer" href="https://canvas.uva.nl/courses/28129/files/7187212?wrap=1">Inspection</a></td>
+            </tr>
+            <tr style="height: 190px; border-style: hidden;">
+                <td style="width: 49.9504%; text-align: center; height: 210px; border-style: hidden;"><a id="7187213" class="instructure_file_link instructure_scribd_file inline_disabled" href="https://canvas.uva.nl/courses/28129/files/7187213?wrap=1" target="_blank" rel="noopener noreferrer" data-canvas-previewable="true"><img src="https://canvas.uva.nl/courses/28129/files/7187256/preview" alt="6-1.png" width="180" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/28129/files/7187154" data-api-returntype="File" /></a></td>
+                <td style="width: 49.9504%; text-align: center; height: 210px; border-style: hidden;"><a id="7187212" class="instructure_file_link instructure_scribd_file inline_disabled" href="https://canvas.uva.nl/courses/28129/files/7187212?wrap=1" target="_blank" rel="noopener noreferrer" data-canvas-previewable="true"><img src="https://canvas.uva.nl/courses/28129/files/7187266/preview" alt="7-3.png" width="180" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/28129/files/7187153" data-api-returntype="File" /></a></td>
+            </tr>
+        </tbody>
+    </table>
   </div>
 
-  <!-- FAQ1 -->
-  <p><a id="FAQ1"></a></p>
-  <div class="content-box pad-box-mini border border-trbl border-round" style="padding:15px;border-color: #F2F2F2; background-color: #F2F2F2">
-      <h4 style="text-align: center;"><strong>I have a disability and need extra time for the exam. What should I do?</strong></h4>
-      <p style="padding:10px">Please visit <a href="https://student.uva.nl/onderwerpen/hoe-vraag-je-een-tentamen-voorziening-aan">this page</a> to read the most current information about extra time. Beware that you need to start asking for extra time at least a month prior to the exam because it may take a little while to be processed.</p>
-      <p>&nbsp;</p>
-      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></h5>
-  </div>
-
-  <!-- FAQ2 -->
-  <p><a id="FAQ2"></a></p>
-  <div class="content-box pad-box-mini border border-trbl border-round" style="padding:15px;border-color: #F2F2F2; background-color: #F2F2F2">
-      <h4 style="text-align: center;"><strong>What do I need to bring to the exam?</strong></h4>
-      <p style="padding:10px">You need to bring your UvA Pass and identification. You also need to enter your UvAnetID and password in TestVision to login.</p>
-      <p>&nbsp;</p>
-      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></h5>
-  </div>
-
-  <!-- FAQ3 -->
-  <p><a id="FAQ3"></a></p>
-  <div class="content-box pad-box-mini border border-trbl border-round" style="padding:15px;border-color: #F2F2F2; background-color: #F2F2F2">
-      <h4 style="text-align: center;"><strong>Can I bring a bag? Are there lockers or something to leave things?</strong></h4>
-      <p style="padding:10px">Students can bring bags and just place them under their table.  </p>
-      <p>&nbsp;</p>
-      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></h5>
-  </div>
-
-  <!-- FAQ4 -->
-  <p><a id="FAQ4"></a></p>
-  <div class="content-box pad-box-mini border border-trbl border-round" style="padding:15px;border-color: #F2F2F2; background-color: #F2F2F2">
-      <h4 style="text-align: center;"><strong>How do I login to the exam?</strong></h4>
-      <p style="padding:10px">If you are going to take the exam on location, there will be technical staff present to guide you to the login process. If you are going to take the exam from home (online exam), please view this <a href="https://amsuni.sharepoint.com/sites/FMG_EDU_Soc_Wet/Gedeelde%20documenten/Forms/AllItems.aspx?id=%2Fsites%2FFMG%5FEDU%5FSoc%5FWet%2FGedeelde%20documenten%2FGeneral%2F4%2E%20Digitaal%20Toetsen%2FTeams%20%26%20instructies%2FStudenten%2FUvA%20%2D%20TestVision%20Log%2Din%20instructions%20%28ENG%29%2Epdf&parent=%2Fsites%2FFMG%5FEDU%5FSoc%5FWet%2FGedeelde%20documenten%2FGeneral%2F4%2E%20Digitaal%20Toetsen%2FTeams%20%26%20instructies%2FStudenten">instruction sheet</a> (short PDF guide). You need to login to TestVision with your UvAnetID and password.</p>
-      <p>&nbsp;</p>
-      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></h5>
-  </div>
-
-  <!-- FAQ5 -->
-  <p><a id="FAQ5"></a></p>
-  <div class="content-box pad-box-mini border border-trbl border-round" style="padding:15px;border-color: #F2F2F2; background-color: #F2F2F2">
-      <h4 style="text-align: center;"><strong>What happens if I’m late? Can I nevertheless start the exam?</strong></h4>
-      <p style="padding:10px">If a student is 30 minutes late (or later), they cannot enter the exam room. Also: students can only leave the exam room after 30 minutes, not earlier. </p>
-      <p>&nbsp;</p>
-      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></h5>
-  </div>
-
-  <!-- FAQ6 -->
-  <p><a id="FAQ6"></a></p>
-  <div class="content-box pad-box-mini border border-trbl border-round" style="padding:15px;border-color: #F2F2F2; background-color: #F2F2F2">
-      <h4 style="text-align: center;"><strong>What if I do not have extra time during the exam even though I am entitled to it?</strong></h4>
-      <p style="padding:10px">Please raise your hand as soon as possible to inform the teachers or staff about it. You are too late to get extra time if you have already closed the exam (at the end) so double check the timer that is present in your screen at the very start of the exam (or during). You will be given a temporary non-personal account to take the exam with extra time. Please note that it will be checked afterwards whether you were indeed entitled to extra time. There are consequences if it turns out not to be true.</p>
-      <p>&nbsp;</p>
-      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></h5>
+<!-- FAQ1 -->
+<p><a id="FAQ1"></a></p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+<h4 style="text-align: center; margin-bottom: 35px;"><strong>I have a disability and need extra time for the exam. What should I do?</strong></h4>
+<p style="text-align: center;">
+    Please visit <a href="https://student.uva.nl/onderwerpen/hoe-vraag-je-een-tentamen-voorziening-aan">this page</a> to read the most current information about extra time.
+</p>
+<p style="text-align: center;">
+      Beware that you need to start asking for extra time at least a month prior to the exam because it may take a little while to be processed.
+</p>
+<p>&nbsp;</p>
+<h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></h5>
 </div>
+
+<!-- FAQ2 -->
+<p><a id="FAQ2"></a></p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+    <h4 style="text-align: center; margin-bottom: 35px;"><strong>What do I need to bring to the exam?</strong></h4>
+    <p style="text-align: center;">
+        You need to bring your UvA Pass and identification.
+    </p>
+    <p style="text-align: center;">
+        You also need to enter your UvAnetID and password in TestVision to login.
+    </p>
+  <p>&nbsp;</p>
+  <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></h5>
+</div>
+
+<!-- FAQ3 -->
+<p><a id="FAQ3"></a></p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+  <h4 style="text-align: center; margin-bottom: 35px;"><strong>Can I bring a bag? Are there lockers or something to leave things?</strong></h4>
+  <p style="text-align: center;">Students can bring bags and just place them under their table.</p>
+  <p>&nbsp;</p>
+  <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></h5>
+</div>
+
+<!-- FAQ4 -->
+<p><a id="FAQ4"></a></p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+    <h4 style="text-align: center; margin-bottom: 35px;"><strong>What happens if I’m late? Can I nevertheless start the exam?</strong></h4>
+    <p style="text-align: center;">
+        If a student is 30 minutes late (or later), they cannot enter the exam room.
+    </p>
+    <p style="text-align: center;">
+        Also; students can only leave the exam room after 30 minutes, not earlier.
+    </p>
+  <p>&nbsp;</p>
+  <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></h5>
+</div>
+
+<!-- FAQ5 -->
+<p><a id="FAQ5"></a></p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+  <h4 style="text-align: center; margin-bottom: 35px;"><strong>What if I do not have extra time during the exam even though I am entitled to it?</strong></h4>
+  <p style="text-align: center;">Please raise your hand as soon as possible to inform the teachers or staff about it. You are too late to get extra time if you have already closed the exam (at the end) so double check the timer that is present in your screen at the very start of the exam (or during). You will be given a temporary non-personal account to take the exam with extra time. Please note that it will be checked afterwards whether you were indeed entitled to extra time. There are consequences if it turns out not to be true.</p>
+  <p>&nbsp;</p>
+  <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></h5>
+</div>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
