--- a/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
@@ -68,7 +68,7 @@
 <p>&nbsp;</p>
 <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
 <h4 style="text-align: center; margin-bottom: 35px;"><strong>I made a few late adjustments to the exam in TestVision. What do I need to do?</strong></h4>
-    <p style="text-align: center;">
+    <p style="text-align: center; paddin:10px;">
         If you changed any details in TestVision within one week prior to the exam, please make sure to do the following: <a href="#publishchanges"><span>publish your changes</span></a>.
     </p>
     <p style="text-align: center;">
@@ -97,7 +97,7 @@
 <p>&nbsp;</p>
 <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
 <h4 style="text-align: center; margin-bottom: 35px;"><strong>What do students need to bring to the exam?</strong></h4>
-    <p style="text-align: center;">
+    <p style="text-align: center; padding:10px;">
         Students need to bring their UvA Pass and identification. They also need to enter their UvAnetID and password in TestVision to login. Students are allowed to bring bags and they can place them under their table. Share <a href="https://canvas.uva.nl/courses/28129/pages/digital-exams-faq-students"target=_blank>this page</a> for more frequently asked questions for students.
     </p>
     <p>&nbsp;</p>
@@ -106,62 +106,75 @@
 
 <!-- FAQ3 -->
 <p>&nbsp;</p>
+<p>&nbsp;</p>
 <p><a id="FAQ3"></a></p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
-    <h4 style="text-align:center"><strong>How long in advance do I need to be present at the location?</strong></h4>
-    <p style="padding:10px">Please be present on site 45 minutes before the exam begins. Go in and introduce yourself to the Assistant Floor Manager(s) present at the front of the room (they need to know you are the instructor). You will go through and double check the TestVision exam together with the floor manager to prevent any mistakes or errors. If you have questions or when in doubt, don't hesitate to ask the floor manager for advice or assistance. </p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+    <h4 style="text-align: center; margin-bottom: 35px;"><strong>How long in advance do I need to be present at the location?</strong></h4>
+    <p style="text-align: center; padding:10px;">
+        Please be present on site 45 minutes before the exam begins. Go in and introduce yourself to the Assistant Floor Manager(s) present at the front of the room (they need to know you are the instructor). You will go through and double check the TestVision exam together with the floor manager to prevent any mistakes or errors. If you have questions or when in doubt, don't hesitate to ask the floor manager for advice or assistance. </p>
     <p>&nbsp;</p>
     <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
 </div>
 
 <!-- FAQ4 -->
 <p>&nbsp;</p>
+<p>&nbsp;</p>
 <p><a id="FAQ4"></a></p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
-    <h4 style="text-align:center"><strong>What do I need to do during the exam?</strong></h4>
-    <p style="padding:10px">When the exam begins, you may take a seat in front of the room. If students have substantive questions about the exam they can raise their hand and you can assist them. Teachers are sometimes asked to walk students to the hallway in case they need to go to the toilet.</p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+    <h4 style="text-align: center; margin-bottom: 35px;"><strong>What do I need to do during the exam?</strong></h4>
+    <p style="text-align: center; padding:10px;">
+        When the exam begins, you may take a seat in front of the room. If students have substantive questions about the exam they can raise their hand and you can assist them. Teachers are sometimes asked to walk students to the hallway in case they need to go to the toilet.</p>
     <p>&nbsp;</p>
     <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
 </div>
 
 <!-- FAQ5 -->
 <p>&nbsp;</p>
+<p>&nbsp;</p>
 <p><a id="FAQ5"></a></p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
-    <h4 style="text-align:center"><strong>What happens if someone is late? Can students nevertheless start the exam?</strong></h4>
-    <p style="padding:10px">If a student is 30 minutes late (or later), they cannot enter the exam room. Also: students can only leave the exam room after 30 minutes, not earlier.</p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+    <h4 style="text-align: center; margin-bottom: 35px;"><strong>What happens if someone is late? Can students nevertheless start the exam?</strong></h4>
+    <p style="text-align: center; padding:10px;">
+        If a student is 30 minutes late (or later), they cannot enter the exam room.
+        <br><br>Also: students can only leave the exam room after 30 minutes, not earlier.</p>
     <p>&nbsp;</p>
     <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
 </div>
 
 <!-- FAQ6 -->
 <p>&nbsp;</p>
+<p>&nbsp;</p>
 <p><a id="FAQ6"></a></p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
-    <h4 style="text-align:center"><strong>How is the extra time for students taken care of?</strong></h4>
-    <p style="padding:10px">Students must request extra time well in advance via their student advisor (or student dean). It will take some time before the extra time is processed in SIS so we advice students to do this at least a month prior to the exam. One week before the exam begins, the registration office pulls data from SIS and adds it to the exam in TestVision.
-    <br><br>If you know a student who is late with requesting extra time, you can send an email to the registration office (<a href="mailto:tentamenvoorziening-sw@uva.nl">tentamenvoorziening-sw@uva.nl</a>) with the student number, student name, and the exam concerning the extra time (please include the study advisor or student dean in the CC). The registration office can then manually grant extra time to the exam in TestVision.
-    <br><br>On <a href="https://student.uva.nl/onderwerpen/hoe-vraag-je-een-tentamen-voorziening-aan">this page</a> students can find more information about extra time.</p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+    <h4 style="text-align: center; margin-bottom: 35px;"><strong>How is the extra time for students taken care of?</strong></h4>
+    <p style="text-align: center; padding:10px;">
+        Students must request extra time well in advance via their student advisor (or student dean). It will take some time before the extra time is processed in SIS so we advice students to do this at least a month prior to the exam. One week before the exam begins, the registration office pulls data from SIS and adds it to the exam in TestVision.
+        <br><br>If you know a student who is late with requesting extra time, you can send an email to the registration office (<a href="mailto:tentamenvoorziening-sw@uva.nl">tentamenvoorziening-sw@uva.nl</a>) with the student number, student name, and the exam concerning the extra time (please include the study advisor or student dean in the CC). The registration office can then manually grant extra time to the exam in TestVision.
+        <br><br>On <a href="https://student.uva.nl/onderwerpen/hoe-vraag-je-een-tentamen-voorziening-aan">this page</a> students can find more information about extra time.</p>
     <p>&nbsp;</p>
     <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
 </div>
 
 <!-- FAQ7 -->
 <p>&nbsp;</p>
+<p>&nbsp;</p>
 <p><a id="FAQ7"></a></p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
-    <h4 style="text-align:center"><strong>What if a student does not have extra time during the exam?</strong></h4>
-    <p style="padding:10px">If there is a student who is entitled to extra time but have not been given it in TestVision, the floor managers can grant extra time on an ad hoc basis. Please note that students need to indicate this as soon as possible. If the student has already closed the test (at the end) then extra time can no longer be offered. Students can see a timer running in TestVision and will receive a notification 5 minutes before the end of the exam, they should therefore monitor whether the extra time has been granted or not. </p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+    <h4 style="text-align: center; margin-bottom: 35px;"><strong>What if a student does not have extra time during the exam?</strong></h4>
+    <p style="text-align: center; padding:10px;">
+        If there is a student who is entitled to extra time but have not been given it in TestVision, the floor managers can grant extra time on an ad hoc basis. Please note that students need to indicate this as soon as possible. If the student has already closed the test (at the end) then extra time can no longer be offered. Students can see a timer running in TestVision and will receive a notification 5 minutes before the end of the exam, they should therefore monitor whether the extra time has been granted or not. </p>
     <p>&nbsp;</p>
     <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
 </div>
 
 <!-- FAQ8 -->
 <p>&nbsp;</p>
+<p>&nbsp;</p>
 <p><a id="FAQ8"></a></p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
-    <h4 style="text-align:center"><strong>What will happen if anything goes wrong during the exam?</strong></h4>
-    <p style="padding:10px">The assistant floor managers have the telephone number of ICTO and can reach an ICTO staff member who is ready to act as a backup. In case something goes wrong, make sure students in the room remain quiet and that you remain at the front (so the assistant floor managers can ask you checkup questions to solve the problem as quickly as possible). Please know there’s not much else you can do yourself to solve breakdowns or errors.
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+    <h4 style="text-align: center; margin-bottom: 35px;"><strong>What will happen if anything goes wrong during the exam?</strong></h4>
+    <p style="text-align: center; padding:10px;">
+        The assistant floor managers have the telephone number of ICTO and can reach an ICTO staff member who is ready to act as a backup. In case something goes wrong, make sure students in the room remain quiet and that you remain at the front (so the assistant floor managers can ask you checkup questions to solve the problem as quickly as possible). Please know there’s not much else you can do yourself to solve breakdowns or errors.
     <br><br><a href="https://canvas.uva.nl/courses/8175/pages/contact">Contact ICTO</a> when something went wrong during the exam. If you are in doubt about giving compensation or about what kind of compensation is needed, please contact the exam committee (do not consult an ICTO staff member for advice on this matter). If you have any questions about the technical realization of compensation in TestVision, you can of course contact ICTO for help. </p>
     <p>&nbsp;</p>
     <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
