CCSci homepage update

--- a/CCSi/Homepage_FOUNDATION.html
+++ b/CCSi/Homepage_FOUNDATION.html
@@ -69,7 +69,7 @@
     </ul>
 
     <div id="About" style="background-color: #ffffff; height: auto; padding-left: 30px; padding-top: 30px; padding-bottom: 50px;">
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #f9e663; title="" href="https://amsuni-my.sharepoint.com/:b:/g/personal/t_blomvliet_uva_nl/ERhtPJpOoShNj7W3ysjwQWABCK3iMC_tSZ9z8xVTYamHyQ?e=9QRL3s" target="https://amsuni-my.sharepoint.com/:b:/g/personal/t_blomvliet_uva_nl/ERhtPJpOoShNj7W3ysjwQWABCK3iMC_tSZ9z8xVTYamHyQ?e=9QRL3s" data-api-endpoint="https://amsuni-my.sharepoint.com/:b:/g/personal/t_blomvliet_uva_nl/ERhtPJpOoShNj7W3ysjwQWABCK3iMC_tSZ9z8xVTYamHyQ?e=9QRL3s">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #f9e663; title="" href="https://amsuni-my.sharepoint.com/:w:/g/personal/t_blomvliet_uva_nl/Ebks0SP9zj1OoLU42AAMmwIBPiwHehnrCY-Qozu008Yq2Q?e=kwXIfj">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Course manual</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>You can refer to our course manual for information about learning objectives, course requirements, assignment deadlines, and so forth. Note: This course manual may be updated during the course. Updates will be communicated via Canvas as well.</em></span>
         </a>
