geen idee, atom stond nog open

--- a/Nieuwsbrief/Nieuwsbrief22-23.html
+++ b/Nieuwsbrief/Nieuwsbrief22-23.html
@@ -168,7 +168,7 @@
             </td>
             <td style="width:50%; vertical-align: top; padding-right: 15px">
                 <p style="font-size: 12pt">
-                    Starting this academic year, a new tool will appear in Canvas: <i>Impact</i>! Impact helps students and teachers to make use of the digital learning environment more effectively. Because you receive support based on your activities and location in Canvas, help is more tailored. This means you'll no longer have to search for the right manual or video first! Once you have clicked on the question mark in the bottom right corner, you can scroll through your personalized help window to find relevant information. If you cannot find your answer, you can contact the support of your faculty directly by clicking on the email button at the bottom of the page.
+                    Starting from October, a new tool will appear in Canvas: <i>Impact</i>! Impact helps students and teachers to make use of the digital learning environment more effectively. Because you receive support based on your activities and location in Canvas, help is more tailored. This means you'll no longer have to search for the right manual or video first! Once you have clicked on the question mark in the bottom right corner, you can scroll through your personalized help window to find relevant information. If you cannot find your answer, you can contact the support of your faculty directly by clicking on the email button at the bottom of the page.
                 </p>
                 <p style="font-size: 12pt">
                     <b>Your feedback is very valuable to us! In your personlized help window, you can give the info a thumbs up or down. With this feedback, we can improve the info!</b>
