Masterplan digitaal toetsen

--- a/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
@@ -1,3 +1,60 @@
+<!--
+MASTERPLAN DIGITAAL TOETSEN
+--------------------------------------------------------------------------------------------------------
+Homepage
+-- Data toetsen doorgeven iets vroeger zetten
+-- Onderaan pagina meer enters plaatsen zodat je bij Tips&tricks niet naar boven wordt geduwd
+-- Tab Instructions:
+---- tekstvakken weghalen
+---- Design aanpassen, misschien toch buttons
+---- Je moet iets beter zien wat de bedoeling/proces is
+-- New in TestVision!
+-- Inzage -> wanneer moet je dit uiterlijk hebben doorgegeven?
+--------------------------------------------------------------------------------------------------------
+Algemeen:
+-- Vragen+Toets & Nakijken is iets anders (want daar moet je iets doen) ten opzichte van de FAQ toetsmoment. Dat willen we inzichtelijker maken.
+-- Inzage item moet nog gemaakt worden (iets wat niet echt instructie is maar meer lijkt op een FAQ)
+--------------------------------------------------------------------------------------------------------
+Uitgebreide instructie (oude instructie):
+-- Stap 1: Design weghalen
+-- Stap 4: Moment of examination -> vervangen voor link naar huidige FAQ instructie
+-- Stap 6: Inzage -> vervangen voor link naar nieuwe FAQ inzage instructie
+--------------------------------------------------------------------------------------------------------
+Vragen+Toets:
+V
+-- I'm working with TestVision for the first time. What does the general process look like? (+ how do I access TestVision)
+-- How do I edit a question? (+How can I change the name of a question?) ------ PUBLISH
+-- How can I add a question? -> hieruit moet duidelijk worden dat je ICTO mailt!!!!?!?@?@##@:
+-- What kind of question types can I use?
+T
+-- Which basic settings are there in a test? (+ Instructietekst waar kan ik die zien?)
+-- What if I'd like to use different settings in a test?
+CHECK
+-- Final check (waaronder: tentamen moet op synchroon staan, how to preview the exam)
+-- Twijfel? NEEM CONTACT OP!!!##
+--------------------------------------------------------------------------------------------------------
+FAQ moment van toets:
+Is KLAAR :-D
+--------------------------------------------------------------------------------------------------------
+Assessment:
+-- Beoordelen (mini toevoeging ergens aan de zijkant/"can't see this menu achtig"-> Geen toegang? Beordelaars doorgeven per mail aan ICTO)
+-- Resultaten/scores zien? -> Valideren
+-- Cijfers
+---- Het staat al in Final Grades: hoe bereik je die? (add existing assignment + retrieve TVO grades)
+---- Optioneel: Hoe maak je een export? (+ Import naar Canvas)
+--------------------------------------------------------------------------------------------------------
+Inzage:
+-- Voor design: kijk naar onze oude instructie, moet ongeveer dezelfde inhoud bevatten maar wel hetzelfde design als de FAQ toetsmoment
+-- Plus nieuw item toevoegen: overzicht verschil tussen ingeboekte inzage & geen geboekte Inzage
+--- Verschillende levels of inzages met beschrijving voordelen/nadelen, denk aan schema die op de OPC informatie pagina in sharepoint staat
+--- Stel je kiest voor eigen inzage:
+----- Stuur een mail naar ICTO met wensen datum + tijd (maakt niet uit wanneer en hoe lang, mag je zelf weten)
+----- ICTO stel inzage in en zet in het eigen overzicht en 3 dagen voor anvang ontvang je een automatische mail met alle instructies en info
+----- Locatie doet er niet toe: je kunt kiezen om het online te doen of om samen ergens met de studenten en eigen laptops te zitten
+----- Ook mogelijkheid om alles geprint te doen, zie instructie X hoe
+--------------------------------------------------------------------------------------------------------
+-->
+
 <!-- Banner -->
 <p><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/5129479/preview" alt="2021:22bannertvo-1.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5129479" data-api-returntype="File" /></p>
 
